--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,5 +30,5 @@ spring:
 
 ai:
   openai:
-    base-url: ${AI_INTEGRATIONS_OPENAI_BASE_URL:http://localhost:1106/modelfarm/openai}
-    api-key: ${AI_INTEGRATIONS_OPENAI_API_KEY:_DUMMY_API_KEY_}
+    base-url: ${AI_INTEGRATIONS_OPENAI_BASE_URL:${OPENAI_BASE_URL:https://api.openai.com/v1}}
+    api-key: ${AI_INTEGRATIONS_OPENAI_API_KEY:${OPENAI_API_KEY:_DUMMY_API_KEY_}}
